--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,11 @@ https://huemint.com/website-3/#palette=000000-383399-ebd900-4ec012-ec0002-1d02a0
 https://huemint.com/website-3/#palette=000000-b090c1-96f600-f1cb51-fa420a-201f5f
 https://huemint.com/website-1/#palette=2d3034-efeff1-0e9772 */
 :root {
-  --fuente-principal: "Titillium Web", sans-serif;
-  --fuente-secundaria: "Roboto", sans-serif;
-  --fuente-terciaria: "Poppins", sans-serif;
+  --fuente-principal: "Poppins", sans-serif;
   --color-background: #000000;
   --color-background2: #2d3034;
-  --color-text: #efeff1;
-  --color-title: #0e9772;
+  --color-text: #00e16e;
+  --color-title: #00abed;
 }
 html {
   font-size: 62.5%;
@@ -42,7 +40,6 @@ h2,
 h3 {
   padding: 0;
   margin: 0;
-  font-family: var(--fuente-secundaria);
 }
 
 h1 {
@@ -52,25 +49,23 @@ h1 {
 h2 {
   font-size: 4rem;
   color: var(--color-title);
-  font-style: italic;
 }
 h3 {
   font-size: 2.4rem;
-  font-style: italic;
-  font-weight: 200;
+  color: var(--color-title);
 }
 
 nav {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  position: fixed;
+  position: sticky;
   align-content: center;
   gap: 3rem;
   top: 0;
   left: 0;
   width: 100%;
-  background-color: transparent;
+  background-color: black;
 }
 
 nav > ul {
@@ -88,6 +83,7 @@ nav > ul > li > a {
   padding: 2rem;
   color: var(--color-text);
   font-weight: 700;
+  font-size: 1.8rem;
 }
 
 #welcome-section {
@@ -114,7 +110,7 @@ nav > ul > li > a {
 }
 
 #projects h2 {
-  margin-bottom: 4rem;
+  margin-bottom: 8rem;
 }
 
 .project-tile {
@@ -134,13 +130,56 @@ nav > ul > li > a {
 .section-page {
   display: flex;
   flex-direction: column;
+  padding: 2rem;
+  border: 1px solid red;
 }
 
 .section-page a {
   color: var(--color-text);
   text-transform: uppercase;
   text-decoration: none;
-  font-family: var(--fuente-terciaria);
   font-weight: 700;
   width: auto;
+}
+
+#contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  margin-top: 5rem;
+}
+
+@media only screen and (max-width: 600px) {
+  h1 {
+    font-size: 4rem;
+  }
+  h2 {
+    font-size: 3rem;
+  }
+  h3 {
+    font-size: 2rem;
+  }
+
+  p {
+    font-size: 1.6rem;
+  }
+
+  nav {
+    justify-content: center;
+  }
+
+  nav > ul > li > a {
+    font-size: 1.6rem;
+  }
+
+  #welcome-section {
+    text-align: center;
+  }
+
+  .project-tile img {
+    height: 20rem;
+    width: 25rem;
+    object-fit: fill;
+  }
 }
